--- a/themes/speak/speak.libraries.yml
+++ b/themes/speak/speak.libraries.yml
@@ -6,5 +6,9 @@ global:
   js:
     js/speak.js: {}
 
+fonts:
+  css:
+    theme:
+      '//fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400,300,700|Open+Sans:300italic,400,300': { type: external, minified: true }
 
   
