--- a/themes/speak/speak.libraries.yml
+++ b/themes/speak/speak.libraries.yml
@@ -9,6 +9,6 @@ global:
 fonts:
   css:
     theme:
-      '//fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400,300,700|Open+Sans:300italic,400,300': { type: external, minified: true }
+      'fonts.googleapis.com/css?family=Lato': { type: external, minified: true }
 
   
